--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -77,6 +77,7 @@
         "react-dom": "^18.2.0",
         "react-i18next": "^12.0.0",
         "react-scripts": "^5.0.1",
+        "react-use": "^17.4.0",
         "rimraf": "^4.1.2",
         "rollup": "^3.14.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
