Filtering, Subgraph fixes and a bunch of other stuff (#105)
* feat(ui): implement checkbox

* feat(subgraph): implement creation timestamp indexing

* feat(sdk): add creation timestamp to kpi token entity

* feat(sdk): add creation timestamp to kpi token entity

* feat(sdk): update sepolia addresses

* feat(react): implement use page hook

* feat(ui): white space nowrap in chip

* feat(frontend): handle many chips in kpi token and template card

* chore(subgraph): update goerli addresses

* chore(sdk): update goerli addresses

* feat(subgraph): handle specifications/description through ipfs templates

* feat(ui): update select typings

* chore(ui): delete .npmrc

* chore(ui): show all lists always in erc20 token picker

* chore(ui): use official carrot token list in token picker story

* chore(sdk): update default ipfs gateway

* feat(sdk): adapt to the new subgraph structure

* chore(ui): v0.21.0

* chore(subgraph): make ipfs-related entity fields nullable

* fix(subgraph): update specification cid on spec update

* fix(subgraph): minor updates

* fix(subgraph): update abis and schema

* fix(subgraph): minor updates

* feat(subgraph): implement template sets to keep track of versioned templates

* fix(subgraph): make spec and desc fields nullable and use bigint instead of int to not overflow

* fix(subgraph): fix oracle creation by passing context

* feat(subgraph): dynamically fetch data from ipfs if not yet available in subgraph + other fixes

* fix(frontend): fix kpi token instantiation after sdk updates

* feat(frontend): update marquee

* fix(frontend): fix templates section data fetching

* feat(frontend): rework campaigns page

* feat(ui): responsive title sizes

* feat(frontend): remove responsive header and use typography + responsive hero

* chore(ui): remove extra console.log

* fix(frontend): update no scrollbar class

* feat(frontend): make dxdao link float over featured cards

* f

--- a/packages/subgraph/subgraph.yaml
+++ b/packages/subgraph/subgraph.yaml
@@ -10,8 +10,8 @@ dataSources:
     network: goerli
     source:
       abi: Factory
-      address: "0x59429Bcc86FF13f9B66Af412Ff62dD2c9eF8e607"
-      startBlock: 7669575
+      address: "0x9fa71dF5AEa30B488839984EDC8efe57DBc3e8C7"
+      startBlock: 8470313
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -57,9 +57,9 @@ templates:
           handler: handleAddTemplate
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
-        - event: RemoveTemplate(indexed uint256,uint256)
+        - event: RemoveTemplate(indexed uint256)
           handler: handleRemoveTemplate
-        - event: UpdateTemplateSpecification(indexed uint256,uint256,string)
+        - event: UpdateTemplateSpecification(indexed uint256,string,uint256)
           handler: handleUpdateTemplateSpecification
         - event: UpgradeTemplate(indexed uint256,indexed address,uint256,string)
           handler: handleUpgradeTemplate
@@ -84,9 +84,9 @@ templates:
           handler: handleAddTemplate
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
-        - event: RemoveTemplate(indexed uint256,uint256)
+        - event: RemoveTemplate(indexed uint256)
           handler: handleRemoveTemplate
-        - event: UpdateTemplateSpecification(indexed uint256,uint256,string)
+        - event: UpdateTemplateSpecification(indexed uint256,string,uint256)
           handler: handleUpdateTemplateSpecification
         - event: UpgradeTemplate(indexed uint256,indexed address,uint256,string)
           handler: handleUpgradeTemplate
@@ -132,3 +132,36 @@ templates:
         - event: Finalize(uint256)
           handler: handleFinalize
       file: ./src/oracle.ts
+  - kind: file/ipfs
+    name: KPITokenTemplateSpecification
+    mapping:
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      file: ./src/ipfs.ts
+      handler: handleKPITokenTemplateSpecification
+      entities:
+        - KPITokenTemplateSpecification
+      abis: []
+    network: goerli
+  - kind: file/ipfs
+    name: KPITokenDescription
+    mapping:
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      file: ./src/ipfs.ts
+      handler: handleKPITokenDescription
+      entities:
+        - KPITokenDescription
+      abis: []
+    network: goerli
+  - kind: file/ipfs
+    name: OracleTemplateSpecification
+    mapping:
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      file: ./src/ipfs.ts
+      handler: handleOracleTemplateSpecification
+      entities:
+        - OracleTemplateSpecification
+      abis: []
+    network: goerli
