--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -49,7 +49,8 @@
         "react-spring-carousel": "^2.0.19",
         "react-use": "^17.4.0",
         "react-virtualized-auto-sizer": "^1.0.7",
-        "react-window": "^1.8.8"
+        "react-window": "^1.8.8",
+        "swiper": "^9.0.5"
     },
     "peerDependencies": {
         "@fontsource/ibm-plex-mono": "^4.5.12",
