Page and creation form modal (#118)
* feat(frontend): use fullscreen modals to show creation forms and campaigns

* feat(frontend): wrap root component in strict mode

* feat(frontend): new transitions in page and creation form components

* fix(react): use layout effect while loading namespaced translate function to avoid flickering

* feat(react): improve perf while getting federated module container

* feat(react): hot module cache in use template module

* feat(react): avoid readding i18n bundle if already there

* feat(frontend): use browser router

* feat(frontend): improbve modal route support

* feat(react): module cache removed

* fix(frontend): fix

* feat(react): make loader more flexible

* feat(frontend): use loader

* feat(react): implement module and namespaced translate function cache

* feat(frontend): make animation simpler

* feat(react): pass kpi token directly to kpi token page

* fix(react): remove pointless hookhook dependency

* feat(react): more efficient oracle component, passing oracle entity directly

* fix(frontend): fix null dereference in useeffect

* feat(frontend): automatic top scroll when navigating between main locations

* fix(frontend): better useeffect dependencies

* feat(frontend): simplify connnect wallet button

* fix(frontend): go back to using hash router

* chore(frontend): extract to variable

* fix(frontend): make noborder prop work on kpi token card

* fix(frontend): once a modal is opened, disable scroll on html, and reenable once closed

* feat(frontend): automatically set prefer decentralization to true in preview mode

* chore(frontend): update shared dependencies

* chore(react): hot cache for translate function

* chore(frontend): update lockfile

* chore(sdk): v1.16.2

* chore(ui): v0.22.1

* chore(react): v0.26.1

* chore(sdk): v1.16.3

* chore(frontend): v1.0.0-rc.30

* fix(ui): fix spinner not showing on loading

* feat(frontend): smalle

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@carrot-kpi/frontend",
     "license": "GPL-3.0-or-later",
-    "version": "1.0.0-rc.28",
+    "version": "1.0.0-rc.30",
     "description": "Frontend for Carrot KPI protocol v1.",
     "main": "./dist/bootstrap.js",
     "module": "./dist/bootstrap.js",
@@ -53,6 +53,7 @@
         "@craco/craco": "^7.0.0",
         "@fontsource/ibm-plex-mono": "^4.5.13",
         "@fontsource/inter": "^4.5.15",
+        "@react-spring/web": "^9.6.1",
         "@rollup/plugin-commonjs": "^24.0.1",
         "@rollup/plugin-json": "^6.0.0",
         "@rollup/plugin-node-resolve": "^15.0.1",
