--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -36,6 +36,7 @@
         "@carrot-kpi/sdk": "*",
         "@ethersproject/bignumber": "^5.7.0",
         "@popperjs/core": "^2.11.6",
+        "@tailwindcss/line-clamp": "^0.4.2",
         "@tiptap/extension-placeholder": "2.0.0-beta.215",
         "@tiptap/pm": "^2.0.0-beta.215",
         "@tiptap/react": "2.0.0-beta.215",
