--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,6 +35,7 @@
         "@carrot-kpi/react": "*",
         "@carrot-kpi/sdk": "*",
         "@carrot-kpi/ui": "*",
+        "@tanstack/react-query": "^4.24.6",
         "class-variance-authority": "^0.4.0",
         "ethereum-blockies-base64": "^1.0.2",
         "ethers": "^5.7.1",
