--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,4 @@
 {
-    "type": "module",
     "name": "@carrot-kpi/react",
     "author": "Federico Luzzi <federico.luzzi@protonmail.com>",
     "version": "0.27.0",
@@ -27,9 +26,12 @@
     "dependencies": {
         "@carrot-kpi/sdk": "*",
         "@ethersproject/bignumber": "^5.7.0",
+        "@tanstack/query-sync-storage-persister": "^4.24.9",
+        "@tanstack/react-query-persist-client": "^4.24.9",
         "@uniswap/token-lists": "1.0.0-beta.31"
     },
     "peerDependencies": {
+        "@tanstack/react-query": "^4.24.9",
         "i18next": "^22.0.2",
         "react": "^18.2.0",
         "react-i18next": "^12.0.0",
@@ -39,6 +41,7 @@
         "@rollup/plugin-commonjs": "^24.0.1",
         "@rollup/plugin-node-resolve": "^15.0.1",
         "@size-limit/preset-small-lib": "^8.1.0",
+        "@tanstack/react-query": "^4.24.9",
         "@types/react": "^18.0.23",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
         "eslint": "^8.33.0",
