--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -44,6 +44,7 @@
     "peerDependencies": {
         "@fontsource/ibm-plex-mono": "^4.5.13",
         "@fontsource/inter": "^4.5.15",
+        "@tanstack/react-query": "^4.24.9",
         "i18next": "^22.0.2",
         "react": "^18.2.0",
         "react-i18next": "^12.0.0",
@@ -62,6 +63,7 @@
         "@size-limit/file": "^8.1.0",
         "@svgr/rollup": "^6.5.1",
         "@tailwindcss/line-clamp": "^0.4.2",
+        "@tanstack/react-query": "^4.24.9",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.6",
         "@types/react-router-dom": "^5.3.3",
