--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,7 +28,8 @@
         "@ethersproject/bignumber": "^5.7.0",
         "@tanstack/query-sync-storage-persister": "^4.24.9",
         "@tanstack/react-query-persist-client": "^4.24.9",
-        "@uniswap/token-lists": "1.0.0-beta.31"
+        "@uniswap/token-lists": "1.0.0-beta.31",
+        "class-variance-authority": "^0.4.0"
     },
     "peerDependencies": {
         "@tanstack/react-query": "^4.24.9",
