--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -29,7 +29,8 @@
         "@tanstack/query-sync-storage-persister": "^4.24.9",
         "@tanstack/react-query-persist-client": "^4.24.9",
         "@uniswap/token-lists": "1.0.0-beta.31",
-        "class-variance-authority": "^0.4.0"
+        "class-variance-authority": "^0.4.0",
+        "react-use": "^17.4.0"
     },
     "peerDependencies": {
         "@tanstack/react-query": "^4.24.9",
