--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -42,6 +42,7 @@
         "sanitize-html": "^2.9.0"
     },
     "peerDependencies": {
+        "@carrot-kpi/shared-state": "*",
         "@fontsource/ibm-plex-mono": "^4.5.13",
         "@fontsource/inter": "^4.5.15",
         "@tanstack/react-query": "^4.24.9",
@@ -51,6 +52,7 @@
         "wagmi": "^0.9.5"
     },
     "devDependencies": {
+        "@carrot-kpi/shared-state": "*",
         "@craco/craco": "^7.0.0",
         "@fontsource/ibm-plex-mono": "^4.5.13",
         "@fontsource/inter": "^4.5.15",
