--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -44,6 +44,7 @@
         "@types/react-virtualized-auto-sizer": "^1.0.1",
         "@uniswap/token-lists": "1.0.0-beta.31",
         "class-variance-authority": "^0.4.0",
+        "dayjs": "^1.11.7",
         "rc-switch": "^4.0.0",
         "react-number-format": "^5.1.2",
         "react-popper": "^2.3.0",
