feat(ui): add merged cva utility function

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -50,7 +50,8 @@
         "react-popper": "^2.3.0",
         "react-use": "^17.4.0",
         "react-virtualized-auto-sizer": "^1.0.7",
-        "react-window": "^1.8.8"
+        "react-window": "^1.8.8",
+        "tailwind-merge": "^1.10.0"
     },
     "peerDependencies": {
         "@fontsource/ibm-plex-mono": "^4.5.12",
