--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -36,10 +36,14 @@
         "decimal.js-light": "^2.5.1",
         "multiformats": "^9.9.0"
     },
+    "peerDependencies": {
+        "@carrot-kpi/shared-state": "*"
+    },
     "devDependencies": {
         "@babel/core": "^7.19.3",
         "@babel/preset-env": "^7.19.4",
         "@babel/preset-typescript": "^7.18.6",
+        "@carrot-kpi/shared-state": "*",
         "@ethersproject/abi": "^5.7.0",
         "@jest/globals": "^29.4.2",
         "@rollup/plugin-commonjs": "^24.0.1",
