--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -36,6 +36,7 @@
         "@carrot-kpi/sdk": "*",
         "@carrot-kpi/ui": "*",
         "class-variance-authority": "^0.4.0",
+        "dayjs": "^1.11.7",
         "ethereum-blockies-base64": "^1.0.2",
         "ethers": "^5.7.1",
         "react-router-dom": "^6.3.0",
