--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -53,6 +53,7 @@
         "i18next": "^22.0.6",
         "react": "^18.2.0",
         "react-i18next": "^12.0.0",
+        "react-router-dom": "^6.8.2",
         "rimraf": "^4.1.2",
         "rollup": "^3.2.3",
         "rollup-plugin-peer-deps-external": "^2.2.4",
