--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,7 +34,9 @@
     },
     "dependencies": {
         "@carrot-kpi/sdk": "*",
+        "@ethersproject/address": "^5.7.0",
         "@ethersproject/bignumber": "^5.7.0",
+        "@ethersproject/units": "^5.7.0",
         "@popperjs/core": "^2.11.6",
         "@tailwindcss/line-clamp": "^0.4.2",
         "@tiptap/extension-placeholder": "2.0.0-beta.215",
@@ -45,13 +47,15 @@
         "@uniswap/token-lists": "1.0.0-beta.31",
         "class-variance-authority": "^0.4.0",
         "dayjs": "^1.11.7",
+        "decimal.js-light": "^2.5.1",
         "rc-switch": "^4.0.0",
         "react-number-format": "^5.1.2",
         "react-popper": "^2.3.0",
         "react-use": "^17.4.0",
         "react-virtualized-auto-sizer": "^1.0.7",
         "react-window": "^1.8.8",
-        "tailwind-merge": "^1.10.0"
+        "tailwind-merge": "^1.10.0",
+        "wagmi": "^0.12.2"
     },
     "peerDependencies": {
         "@fontsource/ibm-plex-mono": "^4.5.12",
@@ -60,7 +64,6 @@
     },
     "devDependencies": {
         "@babel/core": "^7.19.3",
-        "@ethersproject/address": "^5.7.0",
         "@fontsource/inter": "^4.5.15",
         "@rollup/plugin-commonjs": "^24.0.1",
         "@rollup/plugin-node-resolve": "^15.0.1",
