feat(sdk): make library tree shakeable

--- a/.gitignore
+++ b/.gitignore
@@ -175,4 +175,4 @@ target/
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
-packages/ipfs-pinner/src/contracts
+lib
