--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@commitlint/config-conventional": "^17.1.0",
         "husky": "^8.0.1",
         "prettier": "^2.8.4",
-        "turbo": "^1.8.3"
+        "turbo": "^1.8.3",
+        "typescript": "^5.0.2"
     }
 }
