--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -1,8 +1,4 @@
 {
     "extends": "tsconfig/sdk.json",
-    "include": ["./src/**/*"],
-    "compilerOptions": {
-        "outDir": "./dist",
-        "rootDir": "./src"
-    }
+    "include": ["./src/**/*", "./tests/**/*"]
 }
