chore: update readme

--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -2,7 +2,7 @@
     "name": "eslint-config-custom",
     "version": "0.1.0",
     "main": "index.js",
-    "license": "MIT",
+    "license": "GPL-3.0-or-later",
     "publishConfig": {
         "access": "public"
     },
