--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@carrot-kpi/subgraph",
     "version": "0.1.0",
-    "license": "UNLICENSED",
+    "license": "GPL-3.0-or-later",
     "scripts": {
         "codegen": "graph codegen",
         "clean": "rimraf generated build",
