--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,8 +29,8 @@
         "test": "echo 'No tests' && exit 0",
         "size-limit": "size-limit",
         "release": "yarn publish",
-        "start": "start-storybook -p 6006",
-        "build-storybook": "build-storybook"
+        "start": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
     },
     "dependencies": {
         "@carrot-kpi/sdk": "*",
@@ -64,20 +64,22 @@
     },
     "devDependencies": {
         "@babel/core": "^7.19.3",
+        "@babel/preset-env": "^7.21.4",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.21.4",
         "@fontsource/inter": "^4.5.15",
         "@rollup/plugin-commonjs": "^24.0.1",
         "@rollup/plugin-node-resolve": "^15.0.1",
         "@rollup/plugin-url": "^8.0.1",
         "@size-limit/preset-small-lib": "^8.1.0",
-        "@storybook/addon-actions": "^6.5.12",
-        "@storybook/addon-essentials": "^6.5.13",
-        "@storybook/addon-interactions": "^6.5.12",
-        "@storybook/addon-links": "^6.5.13",
-        "@storybook/builder-webpack5": "^6.5.13",
-        "@storybook/manager-webpack5": "^6.5.13",
-        "@storybook/react": "^6.5.13",
-        "@storybook/testing-library": "^0.0.13",
-        "@storybook/theming": "^6.5.15",
+        "@storybook/addon-actions": "^7.0.7",
+        "@storybook/addon-essentials": "^7.0.7",
+        "@storybook/addon-interactions": "^7.0.7",
+        "@storybook/addon-links": "^7.0.7",
+        "@storybook/react": "^7.0.7",
+        "@storybook/react-webpack5": "^7.0.7",
+        "@storybook/testing-library": "^0.1.0",
+        "@storybook/theming": "^7.0.7",
         "@svgr/rollup": "^6.5.1",
         "@svgr/webpack": "^6.5.1",
         "@tailwindcss/typography": "^0.5.8",
@@ -97,7 +99,8 @@
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-typescript2": "^0.34.0",
         "size-limit": "^8.1.0",
-        "storybook-dark-mode": "^2.0.4",
+        "storybook": "^7.0.7",
+        "storybook-dark-mode": "^3.0.0",
         "tailwindcss": "^3.3.1",
         "tsconfig": "*"
     }
