--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -7,17 +7,20 @@
         "access": "public"
     },
     "scripts": {
-        "lint": "prettier --check .",
-        "format": "prettier --write ."
+        "lint": "prettier --check './*.{json,md,js}'",
+        "format": "prettier --write './*.{json,md,js}'"
     },
-    "dependencies": {
-        "eslint": "^8.39.0",
+    "peerDependencies": {
         "eslint-config-prettier": "^8.8.0",
         "eslint-config-turbo": "^1.9.3",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.32.2"
     },
     "devDependencies": {
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-config-turbo": "^1.9.3",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.32.2",
         "prettier": "^2.8.8"
     }
 }
