--- a/packages/ui/.babelrc.json
+++ b/packages/ui/.babelrc.json
@@ -1,7 +1,7 @@
 {
     "sourceType": "unambiguous",
     "presets": [
-        ["@babel/preset-env"],
+        "@babel/preset-env",
         "@babel/preset-typescript",
         "@babel/preset-react"
     ],
