--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,8 +15,8 @@
         "access": "public"
     },
     "scripts": {
-        "lint": "eslint --ext .tsx,.ts ./src && prettier --check './*.{json,md}'",
-        "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './*.{json,md}'",
+        "lint": "eslint --ext .tsx,.ts ./src && prettier --check './**/*.{json,md}'",
+        "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './**/*.{json,md}'",
         "build": "yarn clean && rollup -c rollup.config.mjs",
         "clean": "rimraf ./dist",
         "test": "echo 'No tests' && exit 0",
