--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "lint": "prettier --check './*.{json,md}'",
-        "format": "prettier --write './*.{json,md}'"
+        "lint": "prettier --check './**/*.{json,md}'",
+        "format": "prettier --write './**/*.{json,md}'"
     },
     "files": [
         "base.json",
