feat(react): add integration with fathom API for event generation

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -21,7 +21,8 @@
         "clean": "rimraf ./dist",
         "test": "echo 'No tests' && exit 0",
         "size-limit": "size-limit",
-        "release": "yarn publish"
+        "release": "yarn publish",
+        "sync-fathom-events": "npx ts-node ./bin/sync-fathom-events/index.ts"
     },
     "dependencies": {
         "@carrot-kpi/sdk": "*",
