--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "tsconfig/react.json",
     "include": ["./src/**/*"],
+    "exclude": ["./src/analytics/generated.ts"],
     "compilerOptions": {
         "outDir": "./dist",
         "rootDir": "./src"
