--- a/turbo.json
+++ b/turbo.json
@@ -35,5 +35,5 @@
         "lint": {},
         "format": {}
     },
-    "globalEnv": ["NODE_ENV"]
+    "globalEnv": ["NODE_ENV", "REACT_APP_FATHOM_SITE_ID"]
 }
