--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     ],
     "scripts": {
         "build": "turbo run build",
-        "build-frontend-library": "turbo run build-library --filter @carrot-kpi/frontend",
+        "build-frontend-library": "turbo run build:library --filter @carrot-kpi/host-frontend",
         "build-storybook": "turbo run build-storybook --filter @carrot-kpi/ui",
         "lint": "turbo run lint",
         "format": "turbo run format",
