--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@carrot-kpi/frontend",
+    "name": "@carrot-kpi/host-frontend",
     "license": "GPL-3.0-or-later",
     "version": "1.0.0-rc.62",
     "description": "Frontend for Carrot KPI protocol v1.",
@@ -25,22 +25,23 @@
         "lint": "eslint --ext .tsx,.ts ./src && prettier --check './**/*.{json,md}'",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './**/*.{json,md}'",
         "clean": "rimraf ./build && rimraf ./dist",
-        "build": "yarn clean && GENERATE_SOURCEMAP=false craco build",
-        "build-library": "yarn clean && rollup -c rollup.config.mjs",
+        "build:standalone": "yarn clean && yarn check-env && GENERATE_SOURCEMAP=false craco build",
+        "build:library": "yarn clean && yarn check-env && rollup -c rollup.config.mjs",
         "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
         "size-limit": "size-limit",
-        "start": "craco start",
-        "start-staging": "STAGING=true craco start"
+        "check-env": "./scripts/check-env.js",
+        "start": "yarn check-env && craco start",
+        "start:staging": "yarn check-env && STAGING=true craco start"
     },
     "dependencies": {
         "@carrot-kpi/react": "*",
         "@carrot-kpi/sdk": "*",
         "@carrot-kpi/ui": "*",
-        "class-variance-authority": "^0.4.0",
+        "class-variance-authority": "^0.6.0",
         "dayjs": "^1.11.7",
         "ethereum-blockies-base64": "^1.0.2",
         "ethers": "^5.7.1",
-        "react-router-dom": "^6.10.0",
+        "react-router-dom": "^6.11.0",
         "sanitize-html": "^2.9.0"
     },
     "peerDependencies": {
@@ -51,7 +52,7 @@
         "i18next": "^22.0.2",
         "react": "^18.2.0",
         "react-i18next": "^12.0.0",
-        "wagmi": "^0.9.5"
+        "wagmi": "^0.12.12"
     },
     "devDependencies": {
         "@carrot-kpi/shared-state": "*",
@@ -64,7 +65,7 @@
         "@rollup/plugin-node-resolve": "^15.0.2",
         "@rollup/plugin-replace": "^5.0.2",
         "@size-limit/file": "^8.1.0",
-        "@tanstack/react-query": "^4.24.9",
+        "@tanstack/react-query": "^4.29.5",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.1",
         "@types/react-router-dom": "^5.3.3",
@@ -73,24 +74,25 @@
         "autoprefixer": "^10.4.14",
         "buffer": "^6.0.3",
         "cross-env": "^7.0.3",
+        "dotenv": "^16.0.3",
         "eslint-config-custom": "*",
         "i18next": "^22.4.15",
         "postcss": "^8.4.23",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-i18next": "^12.0.0",
+        "react-i18next": "^12.2.2",
         "react-scripts": "^5.0.1",
         "react-use": "^17.4.0",
         "rimraf": "^5.0.0",
-        "rollup": "^3.21.0",
+        "rollup": "^3.21.3",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-typescript2": "^0.34.0",
         "size-limit": "^8.1.0",
-        "tailwindcss": "^3.3.1",
+        "tailwindcss": "^3.3.2",
         "tsconfig": "*",
         "typescript": "^5.0.4",
-        "wagmi": "^0.9.5",
+        "wagmi": "^0.12.12",
         "workbox-precaching": "^6.5.4",
         "workbox-routing": "^6.5.4"
     },
