fix: pass in variables to ci gh action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
       - develop
   pull_request:
     types: [opened, synchronize, reopened]
+env:
+  REACT_APP_INFURA_PROJECT_ID: ${{ vars.REACT_APP_INFURA_PROJECT_ID }}
+  REACT_APP_WALLETCONNECT_PROJECT_ID: ${{ vars.REACT_APP_WALLETCONNECT_PROJECT_ID }}
 jobs:
   ci:
     runs-on: ubuntu-latest
