--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
       - develop
   pull_request:
     types: [opened, synchronize, reopened]
+env:
+  REACT_APP_FATHOM_SITE_ID: ${{ vars.REACT_APP_FATHOM_SITE_ID }}
+  REACT_APP_FATHOM_API_KEY: ${{ secrets.REACT_APP_FATHOM_API_KEY }}
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -30,13 +33,8 @@ jobs:
       - name: Test
         run: yarn test
       - name: Generate Fathom code
-        env:
-          REACT_APP_FATHOM_SITE_ID: ${{ secrets.REACT_APP_FATHOM_SITE_ID }}
-          REACT_APP_FATHOM_API_KEY: ${{ secrets.REACT_APP_FATHOM_API_KEY }}
         run: yarn sync-fathom-events
       - name: Build
-        env:
-          REACT_APP_FATHOM_SITE_ID: ${{ secrets.REACT_APP_FATHOM_SITE_ID }}
         run: yarn build
       - name: Size check
         run: yarn size-limit
