--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,10 @@ on:
     types: [opened, synchronize, reopened]
 env:
   REACT_APP_INFURA_PROJECT_ID: ${{ secrets.REACT_APP_INFURA_PROJECT_ID }}
-  REACT_APP_WALLETCONNECT_PROJECT_ID: ${{ secrets.REACT_APP_WALLETCONNECT_PROJECT_ID }}
+  REACT_APP_WALLETCONNECT_PROJECT_ID:
+    ${{ secrets.REACT_APP_WALLETCONNECT_PROJECT_ID }}
+  REACT_APP_FATHOM_SITE_ID: ${{ secrets.REACT_APP_FATHOM_SITE_ID }}
+  REACT_APP_FATHOM_API_KEY: ${{ secrets.REACT_APP_FATHOM_API_KEY }}
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -32,14 +35,7 @@ jobs:
         run: yarn lint
       - name: Test
         run: yarn test
-      - name: Generate Fathom code
-        env:
-          REACT_APP_FATHOM_SITE_ID: ${{ secrets.REACT_APP_FATHOM_SITE_ID }}
-          REACT_APP_FATHOM_API_KEY: ${{ secrets.REACT_APP_FATHOM_API_KEY }}
-        run: yarn sync-fathom-events
       - name: Build
-        env:
-          REACT_APP_FATHOM_SITE_ID: ${{ secrets.REACT_APP_FATHOM_SITE_ID }}
         run: yarn build
       - name: Size check
         run: yarn size-limit
