chore: move all fathom logic to frontend package

--- a/packages/frontend/.env.example
+++ b/packages/frontend/.env.example
@@ -1,3 +1,6 @@
 REACT_APP_INFURA_PROJECT_ID=
 REACT_APP_WALLETCONNECT_PROJECT_ID=
 REACT_APP_FATHOM_SITE_ID=
+
+export REACT_APP_FATHOM_SITE_ID=""
+export REACT_APP_FATHOM_API_KEY=""
