--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,11 +25,11 @@
         "lint": "eslint --ext .tsx,.ts ./src && prettier --check './**/*.{json,md}'",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './**/*.{json,md}'",
         "clean": "rimraf ./build && rimraf ./dist",
-        "sync-fathom-events": "npx ts-node ./scripts/sync-fathom-events/index.ts",
-        "build": "yarn clean && yarn check-env && yarn sync-fathom-events && GENERATE_SOURCEMAP=false craco build",
+        "build": "yarn clean && yarn check-env && yarn prepare-fathom && GENERATE_SOURCEMAP=false craco build",
         "build:library": "yarn clean && yarn check-env && rollup -c rollup.config.mjs",
         "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
         "size-limit": "size-limit",
+        "prepare-fathom": "prepare-fathom",
         "check-env": "./scripts/check-env.js",
         "start": "yarn check-env && craco start",
         "start:staging": "yarn check-env && STAGING=true craco start"
@@ -38,6 +38,7 @@
         "@carrot-kpi/react": "*",
         "@carrot-kpi/sdk": "*",
         "@carrot-kpi/ui": "*",
+        "@guerrap/fathom-client": "^1.0.0",
         "class-variance-authority": "^0.6.0",
         "dayjs": "^1.11.7",
         "ethereum-blockies-base64": "^1.0.2",
