--- a/packages/frontend/.eslintrc
+++ b/packages/frontend/.eslintrc
@@ -7,7 +7,7 @@
     "ignorePatterns": [
         "craco.config.js",
         "tailwind.config.js",
-        "src/analytics/fathom/generated.ts"
+        "src/out"
     ],
     "extends": [
         "custom",
