docs(frontend): edit CONTRIBUTING file

--- a/packages/frontend/.env.example
+++ b/packages/frontend/.env.example
@@ -2,5 +2,5 @@ REACT_APP_INFURA_PROJECT_ID=
 REACT_APP_WALLETCONNECT_PROJECT_ID=
 REACT_APP_FATHOM_SITE_ID=
 
-export REACT_APP_FATHOM_SITE_ID=""
-export REACT_APP_FATHOM_API_KEY=""
+FATHOM_SITE_ID=""
+FATHOM_API_KEY=""
