chore: change fathom env names

--- a/turbo.json
+++ b/turbo.json
@@ -38,7 +38,8 @@
     "globalEnv": [
         "NODE_ENV",
         "REACT_APP_FATHOM_SITE_ID",
-        "REACT_APP_FATHOM_API_KEY",
+        "FATHOM_SITE_ID",
+        "FATHOM_API_KEY",
         "REACT_APP_INFURA_PROJECT_ID",
         "REACT_APP_WALLETCONNECT_PROJECT_ID",
         "CI"
