--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,9 @@ env:
   REACT_APP_INFURA_PROJECT_ID: ${{ secrets.REACT_APP_INFURA_PROJECT_ID }}
   REACT_APP_WALLETCONNECT_PROJECT_ID:
     ${{ secrets.REACT_APP_WALLETCONNECT_PROJECT_ID }}
-  REACT_APP_FATHOM_SITE_ID: ${{ secrets.REACT_APP_FATHOM_SITE_ID }}
-  REACT_APP_FATHOM_API_KEY: ${{ secrets.REACT_APP_FATHOM_API_KEY }}
+  REACT_APP_FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
+  FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
+  FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
 jobs:
   ci:
     runs-on: ubuntu-latest
