--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -56,8 +56,8 @@
         "tailwind-merge": "^1.12.0"
     },
     "peerDependencies": {
+        "@carrot-kpi/switzer-font": "^0.1.0",
         "@fontsource/ibm-plex-mono": "^4.5.12",
-        "@fontsource/inter": "^4.5.15",
         "react": "^18.2.0",
         "wagmi": "^0.12.12"
     },
@@ -66,7 +66,7 @@
         "@babel/preset-env": "^7.21.5",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.21.5",
-        "@fontsource/inter": "^4.5.15",
+        "@carrot-kpi/switzer-font": "^0.1.0",
         "@rollup/plugin-commonjs": "^24.1.0",
         "@rollup/plugin-node-resolve": "^15.0.2",
         "@size-limit/preset-small-lib": "^8.1.0",
