--- a/packages/frontend/.eslintrc
+++ b/packages/frontend/.eslintrc
@@ -4,7 +4,11 @@
         "browser": true,
         "es6": true
     },
-    "ignorePatterns": ["craco.config.js", "tailwind.config.js"],
+    "ignorePatterns": [
+        "craco.config.js",
+        "tailwind.config.js",
+        "src/out"
+    ],
     "extends": [
         "custom",
         "plugin:react/recommended",
