--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,10 +25,11 @@
         "lint": "eslint --ext .tsx,.ts ./src && prettier --check './**/*.{json,md}'",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './**/*.{json,md}'",
         "clean": "rimraf ./build && rimraf ./dist",
-        "build": "yarn clean && yarn check-env && GENERATE_SOURCEMAP=false craco build",
+        "build": "yarn clean && yarn check-env && yarn prepare-fathom && GENERATE_SOURCEMAP=false craco build",
         "build:library": "yarn clean && yarn check-env && rollup -c rollup.config.mjs",
         "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
         "size-limit": "size-limit",
+        "prepare-fathom": "prepare-fathom",
         "check-env": "./scripts/check-env.js",
         "start": "yarn check-env && craco start",
         "start:staging": "yarn check-env && STAGING=true craco start"
@@ -42,7 +43,8 @@
         "ethereum-blockies-base64": "^1.0.2",
         "ethers": "^5.7.1",
         "react-router-dom": "^6.11.0",
-        "sanitize-html": "^2.9.0"
+        "sanitize-html": "^2.9.0",
+        "use-fathom-client": "^1.1.0"
     },
     "peerDependencies": {
         "@carrot-kpi/shared-state": "*",
