feat(frontend): improve env settings and build conditions
- define different build command for each build mode (production, staging and library)
- update turbo.json config to reflect new commands
- rename check-env script to config-react-env and avoid requiring certain envs in library and staging mode (fathom tracking and walletconnect support becomes optional in staging mode and not present in library mode)
- split out fathom initialization in its own component that is only loaded in production mode
- enable service worker in staging mode

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,14 +25,15 @@
         "lint": "eslint --ext .tsx,.ts ./src && prettier --check './**/*.{json,md}'",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './**/*.{json,md}'",
         "clean": "rimraf ./build && rimraf ./dist",
-        "build": "yarn clean && yarn check-env && yarn prepare-fathom && GENERATE_SOURCEMAP=false craco build",
-        "build:library": "yarn clean && yarn check-env && rollup -c rollup.config.mjs",
+        "build:production": "yarn clean && yarn config-react-env production && yarn prepare-fathom && GENERATE_SOURCEMAP=false craco build",
+        "build:staging": "yarn clean && yarn config-react-env staging && yarn prepare-fathom && GENERATE_SOURCEMAP=false STAGING=true craco build",
+        "build:library": "yarn clean && yarn config-react-env library && yarn prepare-fathom && rollup -c rollup.config.mjs",
         "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
         "size-limit": "size-limit",
         "prepare-fathom": "prepare-fathom",
-        "check-env": "./scripts/check-env.js",
-        "start": "yarn check-env && craco start",
-        "start:staging": "yarn check-env && STAGING=true craco start"
+        "config-react-env": "./scripts/config-react-env.js",
+        "start": "yarn config-react-env && craco start",
+        "start:staging": "yarn config-react-env && STAGING=true craco start"
     },
     "dependencies": {
         "@carrot-kpi/react": "*",
