--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     ],
     "scripts": {
         "build": "turbo run build",
-        "build-frontend-library": "turbo run build:library --filter @carrot-kpi/host-frontend",
-        "build-storybook": "turbo run build-storybook --filter @carrot-kpi/ui",
+        "build:frontend-production": "turbo run build:production --filter @carrot-kpi/host-frontend",
+        "build:frontend-staging": "turbo run build:staging --filter @carrot-kpi/host-frontend",
+        "build:frontend-library": "turbo run build:library --filter @carrot-kpi/host-frontend",
+        "build:storybook": "turbo run build:storybook --filter @carrot-kpi/ui",
         "lint": "turbo run lint",
         "format": "turbo run format",
         "start": "turbo run start",
