--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -33,20 +33,26 @@
         "size-limit": "size-limit",
         "prepare-fathom": "prepare-fathom",
         "config-react-env": "./scripts/config-react-env.js",
-        "start": "yarn config-react-env && craco start",
-        "start:staging": "yarn config-react-env && STAGING=true craco start"
+        "start": "yarn config-react-env local && craco start",
+        "start:staging": "yarn config-react-env local && STAGING=true craco start"
     },
     "dependencies": {
         "@carrot-kpi/react": "*",
         "@carrot-kpi/sdk": "*",
         "@carrot-kpi/ui": "*",
+        "@reduxjs/toolkit": "^1.9.5",
         "class-variance-authority": "^0.6.0",
         "dayjs": "^1.11.7",
+        "eth-provider": "^0.13.6",
         "ethereum-blockies-base64": "^1.0.2",
-        "ethers": "^5.7.1",
-        "react-router-dom": "^6.11.0",
+        "ethereum-provider": "^0.7.7",
+        "lodash.debounce": "^4.0.8",
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.11.1",
         "sanitize-html": "^2.9.0",
-        "use-fathom-client": "^1.2.0"
+        "use-fathom-client": "^1.2.0",
+        "viem": "^0.3.24",
+        "workbox-strategies": "^6.5.4"
     },
     "peerDependencies": {
         "@carrot-kpi/shared-state": "*",
@@ -64,14 +70,15 @@
         "@craco/craco": "^7.1.0",
         "@fontsource/ibm-plex-mono": "^4.5.13",
         "@react-spring/web": "^9.7.2",
-        "@rollup/plugin-commonjs": "^24.1.0",
+        "@rollup/plugin-commonjs": "^25.0.0",
         "@rollup/plugin-json": "^6.0.0",
         "@rollup/plugin-node-resolve": "^15.0.2",
         "@rollup/plugin-replace": "^5.0.2",
         "@size-limit/file": "^8.1.0",
-        "@tanstack/react-query": "^4.29.5",
+        "@tanstack/react-query": "^4.29.7",
+        "@types/lodash.debounce": "^4.0.7",
         "@types/react": "^18.2.0",
-        "@types/react-dom": "^18.2.1",
+        "@types/react-dom": "^18.2.4",
         "@types/react-router-dom": "^5.3.3",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
         "@types/sanitize-html": "^2.9.0",
@@ -88,7 +95,7 @@
         "react-scripts": "^5.0.1",
         "react-use": "^17.4.0",
         "rimraf": "^5.0.0",
-        "rollup": "^3.21.3",
+        "rollup": "^3.21.7",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-typescript2": "^0.34.0",
@@ -96,7 +103,7 @@
         "tailwindcss": "^3.3.2",
         "tsconfig": "*",
         "typescript": "^5.0.4",
-        "wagmi": "^0.12.12",
+        "wagmi": "^1.0.4",
         "workbox-precaching": "^6.5.4",
         "workbox-routing": "^6.5.4"
     },
