--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,13 +25,12 @@
     },
     "dependencies": {
         "@carrot-kpi/sdk": "*",
-        "@ethersproject/address": "^5.7.0",
-        "@ethersproject/bignumber": "^5.7.0",
-        "@tanstack/query-sync-storage-persister": "^4.29.5",
-        "@tanstack/react-query-persist-client": "^4.29.5",
+        "@tanstack/query-sync-storage-persister": "^4.29.7",
+        "@tanstack/react-query-persist-client": "^4.29.7",
         "@uniswap/token-lists": "1.0.0-beta.31",
         "class-variance-authority": "^0.6.0",
-        "react-use": "^17.4.0"
+        "react-use": "^17.4.0",
+        "viem": "^0.3.24"
     },
     "peerDependencies": {
         "@carrot-kpi/shared-state": "*",
@@ -39,28 +38,29 @@
         "i18next": "^22.0.2",
         "react": "^18.2.0",
         "react-i18next": "^12.2.2",
-        "wagmi": "^0.12.12"
+        "wagmi": "^1.0.4"
     },
     "devDependencies": {
         "@carrot-kpi/shared-state": "*",
-        "@rollup/plugin-commonjs": "^24.1.0",
+        "@rollup/plugin-commonjs": "^25.0.0",
         "@rollup/plugin-node-resolve": "^15.0.2",
         "@size-limit/preset-small-lib": "^8.1.0",
-        "@tanstack/react-query": "^4.29.5",
+        "@tanstack/react-query": "^4.29.7",
         "@types/react": "^18.2.0",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
-        "eslint": "^8.39.0",
+        "eslint": "^8.40.0",
         "eslint-config-custom": "*",
         "i18next": "^22.4.15",
         "react": "^18.2.0",
         "react-i18next": "^12.2.2",
-        "react-router-dom": "^6.11.0",
+        "react-router-dom": "^6.11.1",
         "rimraf": "^5.0.0",
-        "rollup": "^3.21.3",
+        "rollup": "^3.21.7",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-typescript2": "^0.34.0",
         "size-limit": "^8.1.0",
         "tsconfig": "*",
-        "wagmi": "^0.12.12"
+        "typescript": "^5.0.4",
+        "wagmi": "^1.0.4"
     }
 }
