--- a/packages/shared-state/package.json
+++ b/packages/shared-state/package.json
@@ -31,18 +31,21 @@
         "react": "^18.2.0"
     },
     "devDependencies": {
-        "@rollup/plugin-commonjs": "^24.1.0",
+        "@rollup/plugin-commonjs": "^25.0.0",
         "@rollup/plugin-node-resolve": "^15.0.2",
         "@size-limit/preset-small-lib": "^8.1.0",
         "@types/lodash.debounce": "^4.0.7",
+        "@types/react": "^18.2.0",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
-        "eslint": "^8.39.0",
+        "eslint": "^8.40.0",
         "eslint-config-custom": "*",
+        "react": "^18.2.0",
         "rimraf": "^5.0.0",
-        "rollup": "^3.21.0",
+        "rollup": "^3.21.7",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-typescript2": "^0.34.0",
         "size-limit": "^8.1.0",
-        "tsconfig": "*"
+        "tsconfig": "*",
+        "typescript": "^5.0.4"
     }
 }
