--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,9 +34,6 @@
     },
     "dependencies": {
         "@carrot-kpi/sdk": "*",
-        "@ethersproject/address": "^5.7.0",
-        "@ethersproject/bignumber": "^5.7.0",
-        "@ethersproject/units": "^5.7.0",
         "@popperjs/core": "^2.11.7",
         "@tiptap/extension-placeholder": "2.0.3",
         "@tiptap/pm": "^2.0.3",
@@ -48,12 +45,13 @@
         "dayjs": "^1.11.7",
         "decimal.js-light": "^2.5.1",
         "rc-switch": "^4.1.0",
-        "react-number-format": "^5.1.4",
+        "react-number-format": "^5.2.1",
         "react-popper": "^2.3.0",
         "react-use": "^17.4.0",
-        "react-virtualized-auto-sizer": "^1.0.15",
+        "react-virtualized-auto-sizer": "^1.0.16",
         "react-window": "^1.8.9",
-        "tailwind-merge": "^1.12.0"
+        "tailwind-merge": "^1.12.0",
+        "viem": "^0.3.24"
     },
     "peerDependencies": {
         "@carrot-kpi/switzer-font": "^0.1.0",
@@ -66,17 +64,17 @@
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.21.5",
         "@carrot-kpi/switzer-font": "^0.1.0",
-        "@rollup/plugin-commonjs": "^24.1.0",
+        "@rollup/plugin-commonjs": "^25.0.0",
         "@rollup/plugin-node-resolve": "^15.0.2",
         "@size-limit/preset-small-lib": "^8.1.0",
-        "@storybook/addon-actions": "^7.0.8",
-        "@storybook/addon-essentials": "^7.0.8",
-        "@storybook/addon-interactions": "^7.0.8",
-        "@storybook/addon-links": "^7.0.8",
-        "@storybook/react": "^7.0.8",
-        "@storybook/react-webpack5": "^7.0.8",
+        "@storybook/addon-actions": "^7.0.11",
+        "@storybook/addon-essentials": "^7.0.11",
+        "@storybook/addon-interactions": "^7.0.11",
+        "@storybook/addon-links": "^7.0.11",
+        "@storybook/react": "^7.0.11",
+        "@storybook/react-webpack5": "^7.0.11",
         "@storybook/testing-library": "^0.1.0",
-        "@storybook/theming": "^7.0.8",
+        "@storybook/theming": "^7.0.11",
         "@tailwindcss/typography": "^0.5.8",
         "@types/react": "^18.2.0",
         "@types/react-window": "^1.8.5",
@@ -89,14 +87,15 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "rimraf": "^5.0.0",
-        "rollup": "^3.21.3",
+        "rollup": "^3.21.7",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-typescript2": "^0.34.0",
         "size-limit": "^8.1.0",
-        "storybook": "^7.0.8",
+        "storybook": "^7.0.11",
         "storybook-dark-mode": "^3.0.0",
         "tailwindcss": "^3.3.2",
-        "tsconfig": "*"
+        "tsconfig": "*",
+        "typescript": "^5.0.4"
     }
 }
