--- a/packages/frontend/.fathomrc
+++ b/packages/frontend/.fathomrc
@@ -1,5 +1,5 @@
 {
-    "outDir": "out/fathom",
+    "outDir": "./src/out/fathom",
     "events": [
         "TX_ERC20_APPROVAL",
         "TX_KPI_TOKEN_CREATION",
