chore(frontend): update how envs are set and checked

--- a/packages/frontend/.env.example
+++ b/packages/frontend/.env.example
@@ -1,5 +1,4 @@
-REACT_APP_INFURA_PROJECT_ID=""
-REACT_APP_WALLETCONNECT_PROJECT_ID=""
-REACT_APP_FATHOM_SITE_ID=""
+INFURA_PROJECT_ID=""
+WALLETCONNECT_PROJECT_ID=""
 FATHOM_SITE_ID=""
 FATHOM_API_KEY=""
