--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -104,9 +104,11 @@
     },
     "browserslist": {
         "production": [
-            ">0.2%",
-            "not dead",
-            "supports bigint"
+            "chrome >= 67",
+            "edge >= 79",
+            "firefox >= 68",
+            "opera >= 54",
+            "safari >= 14"
         ],
         "development": [
             "last 1 chrome version",
